# django_hw

./: .env.sample  all_db_data.json  data.json  groups_fixture.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0002_product_is_published.py  0002_product_manufactured_at.py  0002_rename_product_name_version_product_and_more.py  0003_alter_product_options.py  0003_alter_version_product.py  0003_blogwriting_alter_product_image.py  0004_alter_blogwriting_options.py  0004_alter_product_options.py  0004_alter_version_product.py  0005_alter_blogwriting_slug.py  0005_alter_product_options.py  0006_alter_blogwriting_created_at_and_more.py  0006_alter_product_options.py  0007_alter_product_updated_at.py  0007_remove_product_is_published.py  0008_alter_product_options_product_is_published.py  0008_alter_product_updated_at.py  0009_alter_blogwriting_options.py  0009_alter_product_updated_at.py  0010_alter_blogwriting_options.py  0010_alter_product_created_at.py
catalog/templates/catalog/: base.html  blogwriting_detail.html  blogwriting_form.html  blogwriting_list.html  category_list.html  (+8 more)
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_delete_emailverificationtoken.py  0004_user_is_verificated_user_verification_token.py  0005_alter_user_country.py  0006_contmanager.py  0007_user_is_content_manager_delete_contmanager.py
(+5 files in other folders)
