[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Khitrov <Hitrov.95@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
ipython = "^8.21.0"
pillow = "^10.2.0"
pytils = "^0.4.1"
python-dotenv = "^1.0.1"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
